fix: align product image position

--- a/src/pages/Product/Product.module.css
+++ b/src/pages/Product/Product.module.css
@@ -23,7 +23,8 @@
 }
 
 .image-block {
-  margin-top: 1rem;
+  margin-top: 2rem;
+  justify-content: center;
   min-width: 0;
   flex-basis: 65%;
   max-height: 600px;
